--- a/cinnamon-bing-daily-wallpaper/bing-daily-wallpaper.service
+++ b/cinnamon-bing-daily-wallpaper/bing-daily-wallpaper.service
@@ -6,4 +6,4 @@ Type=exec
 ExecStart=/usr/share/cinnamon-bing-daily-wallpaper/cinnamon-bing-daily-wallpaper
 
 [Install]
-WantedBy=timers.target
+WantedBy=multi-user.target
